--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-notifications": "~0.17.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^10.4.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
